--- a/index.html
+++ b/index.html
@@ -1,102 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Personal Portfolio</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav class="parent">
-            <div class="child1">
-                <a href="#home">HOME</a>
-                <a href="#about">ABOUT</a>
-                <a href="#project">PROJECTS</a>
-                <a href="https://gayatrisharma.hashnode.dev/">BLOGS</a>
-                <a href="#contact">CONTACT</a>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">Menu</button>
-                <div class="dropdown-content">
-                    <a href="#home">HOME</a>
-                    <a href="#about">ABOUT</a>
-                    <a href="#project">PROJECTS</a>
-                    <a href="https://gayatrisharma.hashnode.dev/">BLOGS</a>
-                    <a href="#contact">CONTACT</a>
-                </div>
-            </div>
-        </nav>
-
+      <nav class="parent">
+        <div class="child1">
+          <a href="#home">HOME</a>
+          <a href="#about">ABOUT</a>
+          <a href="#project">PROJECTS</a>
+          <a href="https://gayatrisharma.hashnode.dev/">BLOGS</a>
+          <a href="#contact">CONTACT</a>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">Menu</button>
+          <div class="dropdown-content">
+            <a href="#home">HOME</a>
+            <a href="#about">ABOUT</a>
+            <a href="#project">PROJECTS</a>
+            <a href="https://gayatrisharma.hashnode.dev/">BLOGS</a>
+            <a href="#contact">CONTACT</a>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
+      <section class="container">
+        <div class="right">
+          <h1>GAYATRI SHARMA</h1>
 
-        <section class="container">
-            <div class="right">
-                <h1>GAYATRI SHARMA</h1>
+          <h2>Full Stack Web Developer</h2>
+        </div>
+        <div class="left">
+          <img src="src/my-pic.jpeg" alt="gayatri-image" />
+        </div>
+      </section>
+      <section>
+        <nav class="social">
+          <a class="seneca" href="https://www.senecapolytechnic.ca/home.html"
+            ><img src="src/seneca-removebg-preview.png" height="50px"
+          /></a>
+          <a class="logo" href="https://github.com/GayatriSharma27"
+            ><img src="src/github.png" height="50px"
+          /></a>
+          <a class="x" href="https://twitter.com/Gayatri_Sharma2"
+            ><img
+              src="src/Twitter-X-logo-600x319-removebg-preview.png"
+              height="50px"
+          /></a>
+          <a class="ln" href="https://www.linkedin.com/in/gayatri27"
+            ><img src="src/linkedin.png" height="50px"
+          /></a>
+        </nav>
+      </section>
 
-                <h2>Full Stack Web Developer</h2>
-            </div>
-            <div class="left">
-                <img src="src/my-pic.jpeg" alt="gayatri-image">
-            </div>
-        </section>
-        <section>
-            <nav class="social">
-                <a class="seneca" href="https://www.senecapolytechnic.ca/home.html"><img src="src/seneca-removebg-preview.png"
-                        height="50px"></a>
-                <a class="logo" href="https://github.com/GayatriSharma27"><img src="src/github.png" height="50px"></a>
-                <a class="x" href="https://twitter.com/Gayatri_Sharma2"><img src="src/Twitter-X-logo-600x319-removebg-preview.png"
-                        height="50px"></a>
-                <a class="ln" href="https://www.linkedin.com/in/gayatri27"><img src="src/linkedin.png" height="50px"></a>
+      <section id="about">
+        <div class="container1">
+          <p>
+            My journey into the world of coding began when I enrolled in the
+            Computer Programming Diploma program at Seneca Polytechnic College.
+            It was there that I discovered my passion for learning more about
+            development allows me to excel at crafting dynamic and intuitive web
+            applications marked by scalability, modularity, and exceptional user
+            experiences. <br />
+            As a diligent and self-motivated individual, I am poised to embrace
+            new challenges with an unwavering commitment to excellence, forever
+            pushing the boundaries of what it means to be a leading web
+            developer. <br />
+            Outside of coding, you'll often find me reading literature novels or
+            fiction books, or engaged in gym workouts or dance choreographies.
+          </p>
+          <h1 class="head1">About Me</h1>
+        </div>
 
-            </nav>
+        <article class="stack">
+          <h1 class="s1">CSS3</h1>
+          <h1 class="s8">TECH STACK</h1>
+        <h1 class="s2">NEXT.JS</h1>
+        <h1 class="s7">TAILWIND CSS</h1>
+        <h1 class="s3">PYTHON</h1>
+            <h1 class="s4">GIT&GITHUB</h1>
+            <h1 class="s5">HTML5</h1>
+            <h1 class="s6">C LANGUAGE</h1>
+            <h1 class="s9"></h1>
 
-        </section>
+        </article>
 
 
-        <section id="about">
-            <h1>About Me</h1>
-            <p>My journey into the world of coding began when I enrolled in the
-                Computer Programming Diploma program at Seneca Polytechnic College. It was there that I discovered my
-                passion
-                for developing intuitive user interfaces and managing robust backend systems.
-                I believe in the power of continuous learning and strive to explore working on AI models and websites.
-                Outside of coding, you'll often find me reading literature novels or fiction books, or engaged in gym
-                workouts or dance choreographies.
-            </p>
-            <h1>Tech Stack</h1>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Bootstrap</li>
-                <li>Tailwind CSS</li>
-                <li>JavaScript</li>
-                <li>C</li>
-                <li>Java</li>
-                <li>Python</li>
-                <li>MongoDB Atlas</li>
-                <li>SQL Oracle</li>
-                <li>Linux</li>
-                <li>Git & GitHub</li>
-                <li>React</li>
-                <li>Next.js</li>
-            </ul>
-        </section>
+      </section>
 
-        <section id="project">
-            <h1>Projects</h1>
-        </section>
+      <section id="project">
+        <h1>Projects</h1>
+      </section>
 
-        <section id="contact">
-            <h1>Let's Get in Touch</h1>
-
-        </section>
-
+      <section id="contact">
+        <h1>Let's Get in Touch</h1>
+      </section>
     </main>
-
-</body>
-
+  </body>
 </html>
